# local-ai-agent

./: .gitattributes  .gitignore  .golangci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  start.bat
config/: app.json
crates/runtime-core/: Cargo.toml
crates/runtime-core/examples/: export_get_observations.rs  export_lifecycle_mapping.rs  export_observation_dedupe.rs  export_observation_eval.rs  export_observation_fallback.rs  export_observation_health.rs  export_observation_injection.rs  export_observation_privacy_redact.rs  export_observation_private_skip.rs  export_observation_queue_flow.rs  export_observation_rank.rs  export_observation_recovery.rs  export_observation_reference.rs  export_observation_retry.rs  export_observation_rollback.rs  export_observation_search.rs  export_observation_storage.rs  export_observation_timeline.rs  export_visibility_runtime.rs
crates/runtime-core/src/: action_decode.rs  action_meta.rs  answer_cache.rs  answer_cache_helpers.rs  answer_sanitize.rs  artifacts.rs  checkpoint.rs  compaction.rs  completion.rs  context_builder.rs  context_policy.rs  contracts.rs  events.rs  execution.rs  h03_eval_tests.rs  handoff.rs  knowledge.rs  knowledge_store.rs  lib.rs  llm.rs  memory.rs  memory_layer.rs  memory_object_store.rs  memory_recall.rs  memory_router.rs  memory_schema.rs  memory_views.rs  model_adapter.rs  model_client.rs  observation.rs  paths.rs  planner.rs  prompt.rs  query_engine.rs  query_engine_testkit.rs  repo_context.rs  risk.rs  run_context_metadata.rs  run_failure_metadata.rs  run_finish_events.rs  (+38 more)
(+1855 files in other folders)
