[package]
name = "runtime-core"
version = "0.1.0"
edition = "2024"
description = "本地智能体运行时核心：事件流、状态机、记忆路由、checkpoint"
license = "MIT"
repository = "https://github.com/leilehuimieba/local-ai-agent"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.33", features = ["bundled"] }

[lib]
path = "src/lib.rs"
